--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,21 @@ p {
   padding: 20px 48px;
   border: 0;
 }
-
+a {
+  color: #272727;
+  text-align: center;
+  font-family: Lato;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 35px; /* 145.833% */
+  text-decoration-line: underline;
+}
+.flex-items {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 /* Header styles */
 header {
   background: rgba(229, 84, 115, 0.1);
@@ -53,7 +67,7 @@ header {
   gap: 100px;
 }
 header .banner-text {
-    width: 525px;
+  width: 525px;
 }
 header .banner-text h1 {
   font-size: 60px;
@@ -62,5 +76,39 @@ header .banner-text * {
   margin-bottom: 32px 0;
 }
 header .banner img {
-    margin-top: 50px;
+  margin-top: 50px;
+}
+
+/* Featured Flower styles */
+.feature {
+  text-align: center;
+  margin: 100px auto;
+}
+.feature h2 {
+  font-size: 40px;
+}
+.feature .flex-items {
+  gap: 24px;
+}
+.feature-items img {
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(167, 33, 98, 0.15);
+  width: 200px;
+  height: 300px;
+  padding: 100px 100px 0 100px;
+  margin-bottom: 32px;
+}
+.feature .info p {
+  color: rgba(39, 39, 39, 0.8);
+  font-family: Lato;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 35px; /* 145.833% */
+}
+.feature .service {
+  border-radius: 8px;
+  background: rgba(39, 39, 39, 0.05);
+  height: 320px;
+  margin: 100px auto;
 }
