--- a/styles/style.css
+++ b/styles/style.css
@@ -112,3 +112,19 @@ header .banner img {
   height: 320px;
   margin: 100px auto;
 }
+
+/* Hot Deal styles */
+.hot-deal {
+  border-radius: 8px;
+  background: rgba(229, 84, 115, 0.05);
+  padding: 100px 320px;
+}
+.flex-items {
+  gap: 150px;
+}
+.hot-deal h2 {
+  font-size: 40px;
+}
+.hot-deal h2 span {
+  color: #e55473;
+}
