--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ header .banner img {
   background: rgba(229, 84, 115, 0.05);
   padding: 100px 320px;
 }
-.flex-items {
+.hot-deal .flex-items {
   gap: 150px;
 }
 .hot-deal h2 {
@@ -127,4 +127,20 @@ header .banner img {
 }
 .hot-deal h2 span {
   color: #e55473;
+}
+
+/* Instagram styles */
+.instagram {
+  text-align: center;
+  margin: 100px auto;
+}
+.instagram h2 {
+  font-size: 40px;
+}
+.instagram p {
+  width: 594px;
+  margin: 0 auto;
+}
+.instagram .flex-items {
+  gap: 24px;
 }
