--- a/styles/style.css
+++ b/styles/style.css
@@ -142,7 +142,7 @@ header .banner img {
 /* newsletter styles */
 .newsletter {
   text-align: center;
-  background: url('../images/Rectangle\ 9.png') no-repeat;
+  background: url("../images/Rectangle\ 9.png") no-repeat;
   background-size: cover;
   padding: 120px 0;
   margin-bottom: 100px;
@@ -158,4 +158,32 @@ header .banner img {
   border: 0;
   border-radius: 10px;
   margin-right: 10px;
+}
+/* Footer styles */
+.footer {
+  background: #111010;
+  text-align: center;
+  padding: 100px 0;
+}
+.footer h2 {
+  font-size: 48px;
+  color: #fff;
+}
+.footer h2 span {
+  color: #e55473;
+}
+.footer .footer-paragraph {
+  color: rgba(255, 255, 255, 0.9);
+  font-family: Lato;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+  width: 625px;
+  margin: 0 auto;
+}
+footer p {
+  color: rgba(255, 255, 255, 0.4);
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 400;
 }
